@startuml diagrama_de_classes_ebooks

class Usuario {
  #id: String
  #nome: String
  #senha: String
  #autenticar(senhaDigitada: String): boolean
  #editar(id: String, nome: String, senha: String) : void
}

class Administrador{
  -gerenciarSenha() : void
}

class Aluno {
  -matricula: String
  -estante : List
  +cadastrarAluno() : Aluno
  +editar(nome: String, senha: String, matricula: String) : void
}

class Bibliotecario {
  -registroFuncional: String
  +cadastrarBibliotecario() : Bibliotecario
  +editar(id: String, nome: String, senha: String, registroFuncional: String) : void
  +consultarAlunosComEBook(alunos: List, ebook: EBook): List
}

class Equipe_Biblioteca{
  -registroFuncional: String
  +cadastrarAluno(aluno: Aluno) : Aluno
  +cadastrarBibliotecario(bibliotecario: Bibliotecario) : Bibliotecario
  +cadastrarDisciplina(disciplina: Disciplina) : Disciplina
  +cadastrarCategoria(categoria: Categoria) : Categoria
}

class Disciplina{
  -periodo: Int
  -inicioPeriodo: LocalDate
  -fimPeriodo: LocalDate
  -nome: String
  -eBooks: List
  +editar(periodo: int, inicioPeriodo: LocalDate, fimPeriodo: LocalDate, nome: String) : void
  +indicarEBooK(eBook: EBook): void
  +listarEBooksComLicencaExpirada():void
  +removerEBook(eBook: EBook):void
}

class Categoria{
  -descricao: String
  +cadastrarCategoria() : Categoria
  +editar(categoria: String) : void
}

class EBook {
  -titulo: String
  -editora: String
  -formato: String
  -categoria: Categoria
  -obrigatorio: boolean
  -licensa: Licensa
  +editar(titulo: String, editora: String, formato: String, categoria: Categoria): EBook
  +isObrigatorio() : boolean
  +setObrigatorio() : void
}

class Licenca {
  -limiteAcessosSimultaneos: int
  -minimoAcessosPorSemestre: int
  -acessosAtivos: int
  +temVagaDisponivel(ebook :EBook): boolean
  +acessosAtivosMenorQueMinimoPermitido(): boolean
  +incrementarAcessosAtivos(): void
  +decrementarAcessosAtivos(): void
}

class Estante {
  -maxQtdObrigatorio: Int
  -maxQtdNaoObrigatorio: Int
  -eBooks: List
  +adicionar(ebook: EBook): void
  +remover(ebook: EBook): void
  +listar(): List
  +contarEBooks(): int
  -contarEBooksObrigatorios(): int
  -contarNaoEBooksObrigatorios(): int
  +temEbook(ebook: Ebook): boolean
  +carregarSemValidacao(ebook: Ebook): void
}

Usuario <|-- Aluno
Usuario <|-- Bibliotecario
Usuario <|-- Equipe_Biblioteca
Usuario <|-- Administrador

Aluno "1" *-- "1" Estante
Estante "1" o-- "0..6" EBook
EBook "1" -- "1" Licenca
EBook "1..*" -- "1" Disciplina
EBook "0..*" -- "1" Categoria
Equipe_Biblioteca "1" -- "0..*" Aluno
Equipe_Biblioteca "1" -- "0..*" Bibliotecario
Equipe_Biblioteca "1" -- "0..*" EBook
@enduml